<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_gradient"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pattern"
            android:scaleType="centerCrop"
            android:layout_alignParentBottom="true"/>


        <ImageView
            android:id="@+id/almezan_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:src="@drawable/almezan_logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="rtl"/>


        <ImageButton
            android:id="@+id/sideMenuIB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:tint="@color/orange"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:src="@drawable/sidemenu_icn"
            android:background="@android:color/transparent"
            android:layoutDirection="rtl"/>



        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5330928698678581/8033265869">
        </com.google.android.gms.ads.AdView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/almezan_logo"
            android:layout_above="@id/adView"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/handoutTitleTV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/save_btn_height"
                    android:text="@string/prayer"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/month_tv_size"
                    android:padding="5dp"
                    android:background="@color/dark_yellow"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut1"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/save_btn_height"
                    android:text="@string/handout"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/month_tv_size"
                    android:padding="5dp"
                    android:background="@color/dark_yellow"
                    android:layout_marginTop="@dimen/margin10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut7"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/save_btn_height"
                    android:text="@string/zekr"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/month_tv_size"
                    android:padding="5dp"
                    android:background="@color/dark_yellow"
                    android:layout_marginTop="@dimen/margin10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin20"
                    android:layout_marginRight="@dimen/margin20"
                    android:layout_marginTop="@dimen/margin10"
                    android:text="@string/tut9"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <include
        layout="@layout/side_menu"/>

</android.support.v4.widget.DrawerLayout>