<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_gradient"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pattern"
            android:scaleType="centerCrop"
            android:layout_alignParentBottom="true"/>


        <ImageView
            android:id="@+id/almezan_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/almezan_logo"
            android:layout_alignParentTop="true"/>


        <ImageButton
            android:id="@+id/sideMenuIB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:tint="@color/orange"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:src="@drawable/sidemenu_icn"
            android:background="@android:color/transparent"/>


        <TextView
            android:id="@+id/zekrTitleTV"
            android:layout_below="@id/almezan_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/islamic_icn"
            android:text="@string/zekr"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/header_tv_size"
            android:padding="5dp"
            android:background="@color/green"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"/>


        <ImageView
            android:layout_width="@dimen/islamic_icn"
            android:layout_height="@dimen/islamic_icn"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/almezan_logo"
            android:src="@drawable/islamic_icn"
            android:adjustViewBounds="true"
            android:layout_alignParentRight="true"/>

        <ImageView
            android:layout_width="@dimen/islamic_icn"
            android:layout_height="@dimen/islamic_icn"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/almezan_logo"
            android:src="@drawable/islamic_icn"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5330928698678581/6751973783">
        </com.google.android.gms.ads.AdView>

        <ScrollView
            android:layout_below="@id/zekrTitleTV"
            android:layout_above="@id/adView"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/doaa0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa0"
                    android:textAllCaps="false"
                    android:textSize="@dimen/month_tv_size"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa1"
                    android:textAllCaps="false"
                    android:textSize="@dimen/month_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa2"
                    android:textAllCaps="false"
                    android:textSize="@dimen/month_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa3"
                    android:textAllCaps="false"
                    android:textSize="@dimen/month_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa4"
                    android:textAllCaps="false"
                    android:textSize="@dimen/month_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa5"
                    android:textAllCaps="false"
                    android:textSize="@dimen/month_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa6"
                    android:textAllCaps="false"
                    android:textSize="@dimen/stats_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa7"
                    android:textSize="@dimen/stats_tv_size"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/doaa8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/zekr_btn_bg"
                    android:text="@string/doaa8"
                    android:textSize="@dimen/stats_tv_size"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>


    <include
        layout="@layout/side_menu"/>

</android.support.v4.widget.DrawerLayout>