<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
android:id="@+id/drawer"
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_gradient"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pattern"
            android:layout_alignParentBottom="true"/>


        <ImageButton
            android:id="@+id/sideMenuIB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:tint="@color/orange"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:src="@drawable/sidemenu_icn"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:id="@+id/menuLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_centerInParent="true">


            <Button
                android:id="@+id/prayerAddBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/reg_prayer"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"/>

            <Button
                android:id="@+id/handoutAddBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/charity_counter"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/zekrAddBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/zekr_counter"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/monthlyStatsBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/month_compare"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/statsBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/stats"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"/>


            <Button
                android:id="@+id/zekrStatsBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/zekr_stats"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:textStyle="bold"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:text="@string/rst_counter"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_font"
                android:background="@drawable/btn_bg"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/almezan_logo"
            android:layout_above="@id/menuLL"
            android:layout_width="@dimen/margin140"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/almezan_logo"
            android:layout_alignParentRight="true"
            android:layoutDirection="rtl"
            android:layout_alignParentTop="true"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5330928698678581/8863309410">
        </com.google.android.gms.ads.AdView>


    </RelativeLayout>

<include
    layout="@layout/side_menu"/>

</android.support.v4.widget.DrawerLayout>