<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_gradient"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/pattern"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"/>


    <LinearLayout
        android:id="@+id/resetLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginLeft="@dimen/margin20"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/margin50"
        android:layout_centerInParent="true"
        android:background="@drawable/reset_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/month_tv_size"
            android:textColor="@color/black"
            android:text="@string/reset_message"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin20"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/rstSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/reset_spinner_bg">


            </android.support.v7.widget.AppCompatSpinner>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/spinner_arrowb"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin20">

            <Button
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/no"
                android:background="@drawable/green_btn"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/yes"
                android:background="@drawable/red_btn"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>


    <ImageView
        android:layout_above="@id/resetLL"
        android:layout_width="@dimen/margin70"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:src="@drawable/warning_red"
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"/>



    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5330928698678581/2266111478">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>